--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,11 @@ services:
       - db
     environment:
       - DATABASE_URL=postgresql://postgres:password@postgres_db:5432/postgres
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    
 
   db:
-    image: postgres:13  
+    image: postgres:13
     container_name: postgres_db
     environment:
       POSTGRES_USER: postgres
@@ -35,3 +37,6 @@ services:
 
 volumes:
   postgres_data:
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
