--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==24.2.0
 bcrypt==4.2.0
 certifi==2024.8.30
 click==8.1.7
+coverage==7.6.1
 decorator==5.1.1
 dnspython==2.6.1
 email_validator==2.2.0
@@ -37,6 +38,7 @@ Pygments==2.18.0
 PyJWT==2.9.0
 pytest==8.3.2
 pytest-asyncio==0.24.0
+pytest-cov==5.0.0
 pytest-mock==3.14.0
 pytest-trio==0.8.0
 python-dotenv==1.0.1
